--- a/src/app/modules/home/components/login-page/login-page.component.html
+++ b/src/app/modules/home/components/login-page/login-page.component.html
@@ -3,6 +3,10 @@
     <div class="auth-header">
       <h1 class="auth-title">Вход на сайт</h1>
       <p class="auth-subtitle">Добро пожаловать на Techinterview.space</p>
+      <p class="auth-agreement">
+        Логинясь на сайте, пользователь подтверждает, что ознакомлен и согласен
+        с <a routerLink="/agreements/privacy-policy">пользовательским соглашением</a>.
+      </p>
     </div>
 
     <div class="oauth-section">
